--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,9 @@ logging:
 server:
   servlet:
     encoding.force-response: true
+
+product:
+  client-id: ${CLIENT_ID}
+  client-secret: ${CLIENT_SECRET}
+  redirect-url: ${REDIRECT_URL}
+  jwt-secret-key: ${JWT_SECRET_KEY}
