--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DB_ADDRESS}:${DB_PORT}/mentomen?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://${DB_ADDRESS}:${DB_PORT}/mentomen?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: ${DB_USER}
     password: ${DB_PW}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     #              ddl-auto: none
     properties:
       hibernate:
@@ -24,4 +24,7 @@ server:
     encoding.force-response: true
 
 product:
+  client-id: ${CLIENT_ID}
+  client-secret: ${CLIENT_SECRET}
   jwt-secret-key: ${JWT_SECRET_KEY}
+  redirect-url: ${REDIRECT_URL}
