--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
     static-path-pattern: /static/**
 
 logging:
+  file:
+    path: ${FILE_PATH}
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
