FIX: Logging File Size 및 Max History 옵션 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
 logging:
   file:
     path: ${FILE_PATH}
+    max-size: 500MB
+    max-history: 30
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
